--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.connect5_project/com.example.connect5.HelloApplication
+                            <mainClass>com.example.connect5_project/com.example.connect_5.HelloApplication
                             </mainClass>
                         </configuration>
                     </execution>
