--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>2.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
